Use photoplanet on main page and show in the menu.

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -538,7 +538,8 @@ body.violet #sidebar .tall  { background-image: url(/media/skittlish/x_violet_bo
 /* terraquis customization */
 body.green .article .body a { color: #61ac00; }
 body.green .article #photo23-content a { color: #61ac00; }
-body .article #photo23-content { text-align: right ; }
+/* body .article #photo23-content { text-align: right ; } */
 /* body .article #photo23-content a img { float: right ; } */
-body.green .photo23.article h2 { text-align: right ; }
+/* body.green .photo23.article h2 { text-align: right ; } */
+body.green .photo23.article { text-align: right ; }
 body.green .photo23.article p { color: #61ac00;   font-weight: bold; }
