--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/codi/">Codi</a></li>
+        <li><a href="/photoplanet/">PhotoPlanet</a></li>
         <li><a href="/meta/sobre/">Sobre</a></li>
     </ul>
     {% endblock %}
