--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
 {% endblock %}
 {% block title %} <title>{% trans "De terrícoles i xarxes" %}</title> {% endblock %}
 {% block style %}
- <link href="{{ media_url }}css/base.css" rel="stylesheet" type="text/css" />
+ <link href="{{ MEDIA_URL }}css/base.css" rel="stylesheet" type="text/css" />
  <!--[if IE]>
- <link href="{{ media_url }}css/base-ie.css" rel="stylesheet" type="text/css" />
+ <link href="{{ MEDIA_URL }}css/base_ie.css" rel="stylesheet" type="text/css" />
  <![endif]-->
 {% endblock %}
 {% block script %}{% endblock %}
