No anchor in every tag (there's no url mapped). Show tags only if they exist.

--- a/templates/txts/home_list.html
+++ b/templates/txts/home_list.html
@@ -24,9 +24,9 @@
         {% endif %}
     </div>
     
-    <div class="footer meta">Jordi Funollet, {{ object.pub_date|date:"j-m-Y H:i" }} || tags: 
-        {% for tag in object.tags.all %}
-        <a href="{{ tag.get_absolute_url }}" rel="tag">{{ tag.value }}</a>
+    <div class="footer meta">Jordi Funollet, {{ object.pub_date|date:"j-m-Y H:i" }} 
+        || tags: {% for tag in object.tags.all %}
+        {{ tag.value }}
         {% endfor %}
     </div>
   
