--- a/templates/txts/txt_detail.html
+++ b/templates/txts/txt_detail.html
@@ -7,7 +7,13 @@
     
     <div class="footer"></div>
   
-    <div class="footer meta">Jordi Funollet, {{ object.pub_date|date:"j-m-Y H:i" }}</div>
+    <div class="footer meta">Jordi Funollet, {{ object.pub_date|date:"j-m-Y H:i" }}
+        {% if object.tags.all %}|| tags:
+            {% for tag in object.tags.all %}
+            {{ tag.value }}&nbsp;
+            {% endfor %}
+        {% endif %}
+    </div>
     {% block comments %}{% endblock %}
 </div>
 {% endblock %}
