--- a/templates/txts/txt_list.html
+++ b/templates/txts/txt_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load tagging_tags %}
 
 {% block content %}
 
@@ -12,10 +13,9 @@
     </div>
     
     <div class="footer meta">Jordi Funollet, {{ object.pub_date|date:"j-m-Y H:i" }} 
-        {% if object.tags.all %}|| tags:
-            {% for tag in object.tags.all %}
-            {{ tag.value }}&nbsp;
-            {% endfor %}
+        {% tags_for_object object as tag_list %}
+        {% if tag_list %}|| tags:
+            {% for tag in tag_list %}{{ tag }} {% endfor %}
         {% endif %}
     </div>
   
