--- a/templates/txts/home_detail.html
+++ b/templates/txts/home_detail.html
@@ -7,7 +7,12 @@
     
     <div class="footer"></div>
   
-    <div class="footer meta">Jordi Funollet, {{ object.pub_date|date:"j-m-Y H:i" }}</div>
+    <div class="footer meta">
+        {% if object.author_name %}{{ object.author_name }}, {% endif %} 
+        {{ object.pub_date|date:"j-m-Y H:i" }} 
+        {% include "txts/txts_tags.html" %}
+    </div>
+    
     {% block comments %}{% endblock %}
 </div>
 {% endblock %}
