Removed pre-processing of markup fields. Templates use Markdown.

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
    <h3>Veïns</h3>
    <ul>
     <li><a href="http://www.badopi.org/" title="">Badopi</a></li>
-    <li><a href="http://caliu.info/" title="">Caliu</a></li>
+    <li><a href="http://caliu.cat/" title="">Caliu</a></li>
     <li><a href="http://javierlinares.com/" title="">javierlinares.com</a></li>
     <li><a href="http://kopernix.com" title="">Kopernix</a></li>
     <li><a href="http://cabreta.terraquis.net/" title="">La Cabreta Cursi</a></li>
