--- a/templates/txts/tag_list.html
+++ b/templates/txts/tag_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load comments.comments %}
+{% load markup %}
 
 {% block content %}
 
@@ -7,8 +8,8 @@
 <div class="article">
     <h2 class="title"><a href="{{ object.get_absolute_url }}">{{ object.name }}</a></h2>
     <div class="body">
-        {% if object.abstract %}{{ object.abstract }}
-        {% else %}{{ object.body }}
+        {% if object.abstract %}{{ object.abstract|markdown }}
+        {% else %}{{ object.body|markdown }}
         {% endif %}
     </div>
     
