--- a/templates/txts/txt_list.html
+++ b/templates/txts/txt_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load markup %}
 
 {% block content %}
 
@@ -6,8 +7,8 @@
 <div class="article">
     <h2 class="title"><a href="{{ object.get_absolute_url }}">{{ object.name }}</a></h2>
     <div class="body">
-        {% if object.abstract %}{{ object.abstract }}
-        {% else %}{{ object.body }}
+        {% if object.abstract %}{{ object.abstract|markdown }}
+        {% else %}{{ object.body|markdown }}
         {% endif %}
     </div>
     
