--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
 <div id="footer">
     <p>Valid <a href="http://validator.w3.org/check/referer">XHTML</a> and <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>.
     Design from <a href="http://evil.che.lu/projects/skittlish">skittlish</a>.</p>
-    <a href="http://www.djangoproject.com/"><img src="/media/img/djangomade124x25.gif" alt="Made with Django." title="Made with Django." /></a>
+    <a href="http://www.djangoproject.com/"><img src="{{ MEDIA_URL}}img/djangomade124x25.gif" alt="Made with Django." title="Made with Django." /></a>
 </div>
 {% endblock %}
 
