--- a/templates/txts/blog_detail.html
+++ b/templates/txts/blog_detail.html
@@ -1,5 +1,5 @@
 {% extends "txts/txt_detail.html" %}
-{% load comments.comments %}
+{% load comments %}
 
 {% block comments %}
 <div class="comments">
